[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pet-care-ai-mcp"
version = "1.0.0"
description = "MCP server for pet care - feeding schedules, vaccination tracking, breed identification, health symptoms, training"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MEOK AI Labs", email = "hello@meok.ai" },
]
keywords = ["mcp", "pet-care", "veterinary", "dog", "cat", "breed", "vaccination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/meok-ai/pet-care-ai-mcp"
Documentation = "https://meok.ai/docs"
Issues = "https://github.com/meok-ai/pet-care-ai-mcp/issues"

[project.scripts]
pet-care-ai-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
